lessons/139/5-example-1/1-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: example-1
  labels:
    monitoring: prometheus
    # istio-injection: enabled
