lessons/139/5-example-1/2-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: example-1
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - image: kennethreitz/httpbin
        name: api
        ports:
        - containerPort: 80
